[gd_scene load_steps=2 format=3 uid="uid://bc0iqgoaed12"]

[ext_resource type="Script" uid="uid://c8vrv4ynnxskv" path="res://panel/tracker_item_control.gd" id="1_2wqop"]

[node name="TrackerControl" type="MarginContainer"]
custom_minimum_size = Vector2(196, 32)
offset_right = 196.0
offset_bottom = 38.0
size_flags_horizontal = 3
script = ExtResource("1_2wqop")

[node name="Button" type="Button" parent="."]
layout_mode = 2
theme_type_variation = &"FlatButton"
alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="StateColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderMedium"
text = "wss://TRACKER_URL"
text_overrun_behavior = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
